# SAMkenxmysqlCipher

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
build-scripts/: _build_wheels.sh  build.sh  cleanup.sh
build_scripts/: _build_wheels.sh  build.sh  cleanup.sh
mysqlcipher/: __init__.py  dbapi2.py
