[tool.poetry]
name = "mysqlcipher"
version = "0.1.0"
description = ""
authors = ["jo-project <jo.project.0911@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dependencies.sqlite3]
path = "."

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
